[gd_scene load_steps=3 format=2]

[ext_resource path="res://Canvas/TileModeManager.gd" type="Script" id=1]
[ext_resource path="res://Canvas/Layer.gd" type="Script" id=2]

[node name="TileModeManager" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileLayer_LT" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
tile_layer = true

[node name="TileLayer_T" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
tile_layer = true

[node name="TileLayer_RT" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
tile_layer = true

[node name="TileLayer_L" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
tile_layer = true

[node name="TileLayer_R" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
tile_layer = true

[node name="TileLayer_LB" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
tile_layer = true

[node name="TileLayer_B" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
tile_layer = true

[node name="TileLayer_RB" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
tile_layer = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
